applications/keycloak/ingress.yaml
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
      kubernetes.io/tls-acme: "true"
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
      nginx.ingress.kubernetes.io/server-snippet: |2-
        location ~* "^/auth/realms/master/metrics" {
          return 301 /auth/realms/master;
        }
    labels:
      app: keycloak
    name: keycloak
  spec:
    rules:
    - host: keycloak.tiborpilz.dev
      http:
        paths:
        - backend:
            service:
              name: keycloak
              port:
                number: 8443
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - keycloak.tiborpilz.dev
      secretName: keycloak.tls
